--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "query-string": "^4.2.3",
     "react": "15.3.2",
     "react-native": "^0.37.0",
-    "react-native-vector-icons": "^2.0.2"
+    "react-native-vector-icons": "^2.0.2",
+    "react-native-video": "^0.9.0"
   },
   "jest": {
     "preset": "jest-react-native"
