--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "query-string": "^4.2.3",
     "react": "15.3.2",
     "react-native": "^0.37.0",
+    "react-native-button": "^1.7.1",
+    "react-native-sk-countdown": "^1.0.1",
     "react-native-vector-icons": "^2.0.2",
     "react-native-video": "^0.9.0"
   },
