--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lodash": "^4.17.2",
     "mockjs": "^1.0.0",
     "query-string": "^4.2.3",
-    "react": "15.3.2",
+    "react": "^15.3.2",
     "react-native": "^0.37.0",
     "react-native-button": "^1.7.1",
     "react-native-sk-countdown": "^1.0.1",
